...
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="32dp">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/circle_background"
            android:layout_marginBottom="8dp"
            android:contentDescription="Profile Image"
...
            android:textColor="#000000"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="Name"
            android:backgroundTint="#CCCCCC"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="Email"
            android:backgroundTint="#CCCCCC"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="Phone (optional)"
            android:backgroundTint="#CCCCCC"
            android:layout_marginBottom="24dp" />

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign up"
            android:textColor="@color/text_color"
            android:backgroundTint="@color/ui_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonReturn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Return"
            android:textColor="@color/text_color"
            android:backgroundTint="@color/ui_background"
            app:layout_constraintStart_toStartOf="parent"
...
