...
        android:background="@drawable/circle_background"
        android:contentDescription="Profile Image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/entrantName"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/entrantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonEventSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:backgroundTint="@color/button_color"
        app:srcCompat="@android:drawable/ic_input_add"
        app:layout_constraintTop_toTopOf="parent"
...
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@color/button_color"
        app:layout_constraintTop_toBottomOf="@id/profileImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonNotification"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />

    <!-- Notification Button -->
    <Button
...
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/button_color"
        android:text="Refresh"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonProfile"
        app:layout_constraintStart_toEndOf="@id/buttonNotification" />

    <!-- Profile Button -->
    <Button
        android:id="@+id/buttonProfile"
        android:layout_width="0dp"
...
