...
        android:text="Event1"
        android:textColor="@color/text_color"
        android:layout_weight="1"
        android:layout_gravity="center_vertical" />

    <Button
        android:id="@+id/buttonEventStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Status"
        android:backgroundTint="@color/ui_background"
        android:textColor="@color/text_color" />

...
